# stereo-object-tracker

./: .gitignore  CMakeLists.txt  OpenCV_Debug.props  OpenCV_Release.props  StereoTracker.sln  VLD.props  readme.md  readme.txt
StereoTracker/: BackgroundProcessing.cpp  BackgroundProcessing.h  Cluster.cpp  Cluster.h  Clustering.cpp  Clustering.h  ConfigStore.cpp  ConfigStore.h  Fps.h  Interval.h  KeyPointEx.cpp  KeyPointEx.h  KeyPointPair.cpp  KeyPointPair.h  MotionTracking.cpp  MotionTracking.h  OutputPostprocessing.cpp  OutputPostprocessing.h  PointPicker.cpp  PointPicker.h  StereoCalibrate.cpp  StereoCalibrate.h  StereoCameraInput.cpp  StereoCameraInput.h  StereoPreprocessing.cpp  StereoPreprocessing.h  StereoReconstruction.cpp  StereoReconstruction.h  StereoRecordInput.cpp  StereoRecordInput.h  StereoRecordOutput.cpp  StereoRecordOutput.h  StereoTracker.vcxproj  StereoTracker.vcxproj.filters  StereoVideoInput.cpp  StereoVideoInput.h  Tracker.cpp  Tracker.h  WorldCalibration.cpp  WorldCalibration.h  (+6 more)
